# image_trainer

./: .gitignore  CLAUDE.md  README.md  launch.sh  pyproject.toml
.claude/: settings.json
scripts/: legacy_caption_images.py  legacy_resize_images.py
src/image_trainer/: __init__.py  cli.py  config.py  gui.py  gui_app.py  gui_helpers.py  gui_runner.py  gui_theme.py  gui_widgets.py  prompt_presets.py  wan2gp_installer.py
src/image_trainer/pipeline/: caption.py  caption_wd14.py  face_detect.py  generate.py  ingest.py  insights.py  resize.py  review.py  train.py  video.py
src/image_trainer/tabs/: __init__.py  caption_tab.py  generate_tab.py  prep_tab.py  review_tab.py  settings_tab.py  storage_tab.py  train_tab.py  video_tab.py
