[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_trainer"
version = "0.1.0"
description = "Local end-to-end pipeline for training a personal-likeness LoRA (SDXL) and generating images."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "Pillow",
    "transformers",
    # diffusers is capped to <0.32 because 0.33+ introduced an
    # attention_dispatch.py module that registers torch custom_ops using
    # PEP 604 union types (``float | None``). torch 2.4.1's infer_schema
    # doesn't understand those and raises at import time. Bump the upper
    # bound once we move to torch 2.6+ which handles the new syntax.
    "diffusers>=0.27,<0.32",
    "peft>=0.10",
    "accelerate",
    "safetensors",
    "bitsandbytes",
]

[project.optional-dependencies]
# WD14 NSFW-aware captioner. `onnxruntime` for CPU, `onnxruntime-gpu` for CUDA.
# huggingface_hub downloads the model weights + tag CSV on first use.
wd14 = ["onnxruntime", "huggingface_hub"]
# Long-prompt support for the Generate tab. SDXL's CLIP encoders cap at
# 77 tokens — without compel, anything past that is silently dropped and
# the user gets garbage output that ignored half their prompt. Soft-import
# in pipeline/generate.py: when missing, falls back to truncated prompts
# with an explicit warning so the user knows.
prompts = ["compel"]
# NOTE: xformers is NOT exposed as a pip extra here on purpose.
# `pip install xformers` from PyPI pulls a wheel built against a specific
# torch version and will silently overwrite the user's working torch +
# NCCL, producing `ImportError: undefined symbol: ncclCommWindowDeregister`
# the next time they `import torch`. Install the matched wheel from
# PyTorch's index instead — see README "xformers — install carefully".
# NOTE: face-aware crop in the prep step uses MTCNN from facenet-pytorch,
# but facenet-pytorch pins torch<2.3 which conflicts with the torch version
# the rest of this pipeline wants. DO NOT expose it as a `[face]` extra —
# pip resolution would downgrade torch and break bitsandbytes. Install
# manually instead:
#     pip install facenet-pytorch --no-deps
# `pipeline/face_detect.py` guards the import and falls back to center-crop
# if facenet-pytorch is missing.

[project.scripts]
trainer = "image_trainer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --------------------------------------------------------------------------
# Type-checker config. mypy is optional — no CI gates on it — but if you
# run it locally (`mypy src/image_trainer`) you get a useful report without
# drowning in import errors from the ML stack, which is generally not typed.
# Keep `strict` on so new code is held to a higher bar; loosen one setting
# at a time if you hit a genuine false positive, don't disable the whole
# thing.
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = false
files = ["src/image_trainer"]

# Most of our runtime deps ship without type stubs; silence the import
# errors rather than polluting the codebase with per-import `# type: ignore`.
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "diffusers.*",
    "transformers.*",
    "peft.*",
    "accelerate.*",
    "safetensors.*",
    "bitsandbytes.*",
    "xformers.*",
    "onnxruntime.*",
    "huggingface_hub.*",
    "facenet_pytorch.*",
    "PIL.*",
]
ignore_missing_imports = true
